--- a/package.json
+++ b/package.json
@@ -6,11 +6,14 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "webpack serve --mode development --open --hot",
-    "build": "webpack --mode production"
+    "build": "webpack --mode production",
+    "extract": "lingui extract",
+    "compile": "lingui compile"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@lingui/react": "^3.14.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   },
@@ -20,7 +23,10 @@
     "@babel/plugin-transform-runtime": "^7.18.9",
     "@babel/preset-env": "^7.18.9",
     "@babel/preset-react": "^7.18.6",
+    "@lingui/cli": "^3.14.0",
+    "@lingui/macro": "^3.14.0",
     "babel-loader": "^8.2.2",
+    "babel-plugin-macros": "^3.1.0",
     "babel-preset-env": "^1.7.0",
     "babel-preset-react": "^6.24.1",
     "html-webpack-plugin": "^5.5.0",
