--- a/.babelrc
+++ b/.babelrc
@@ -1,10 +1,18 @@
 {
-   "presets": [
-       "@babel/react" , 
-       "@babel/env" 
-   ],
+  "presets": [
+    [
+      "@babel/preset-env", {
+        "targets": {
+         "ie": "11"
+        }
+      }
+    ],
+    "@babel/preset-react"
+  ],
    "plugins": [
-       "macros",
-       "@babel/plugin-proposal-class-properties"
-   ]
+      "macros",
+      "@babel/plugin-proposal-class-properties",
+      "@babel/plugin-transform-runtime",
+      "@babel/plugin-transform-async-to-generator"
+    ]
 }
