--- a/package.json
+++ b/package.json
@@ -7,8 +7,9 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "webpack serve --mode development --open --hot",
     "build": "webpack --mode production",
-    "extract": "lingui extract",
-    "compile": "lingui compile"
+     "extract": "lingui extract --clean",
+    "compile": "lingui compile",
+    "translate": "npm run compile && npm run extract"
   },
   "author": "",
   "license": "ISC",
@@ -20,7 +21,10 @@
   "devDependencies": {
     "@babel/core": "^7.18.9",
     "@babel/plugin-proposal-class-properties": "^7.18.6",
+    "@babel/plugin-proposal-private-methods": "^7.18.6",
     "@babel/plugin-transform-runtime": "^7.18.9",
+    "@babel/plugin-proposal-private-property-in-object": "^7.13.0",
+    "@babel/plugin-transform-async-to-generator": "^7.13.0",
     "@babel/preset-env": "^7.18.9",
     "@babel/preset-react": "^7.18.6",
     "@lingui/cli": "^3.14.0",
